--- a/docker-compose/k6.yaml
+++ b/docker-compose/k6.yaml
@@ -1,7 +1,7 @@
 version: '2'
 
 networks:
-  k6_k6:
+  docker-compose_k6:
     external: true
 
 services:
@@ -16,6 +16,6 @@ services:
     volumes:
       - ../:/var/app/
     networks:
-      - k6_k6
+      - docker-compose_k6
     environment:
     - TARGET_HOST=172.17.0.1:3001
