--- a/bundletest/package.json
+++ b/bundletest/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5",
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "babel-loader": "^8.2.2",
     "k6": "0.0.0",
-    "underscore": "^1.10.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  }
+    "underscore": "^1.12.0",
+    "webpack": "^5.8.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {}
 }
